[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customics"
version = "0.1.0"
description = "A versatile deep-learning based strategy for multi-omics integration"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Hakim Benkirane", email = "hakim.benkirane@centralesupelec.fr" },
]
keywords = ["multi-omics", "deep-learning", "bioinformatics", "survival-analysis", "VAE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "lifelines>=0.27.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "shap>=0.43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/HakimBenkirane/CustOmics"
Repository = "https://github.com/HakimBenkirane/CustOmics"
"Bug Tracker" = "https://github.com/HakimBenkirane/CustOmics/issues"
Paper = "https://doi.org/10.1371/journal.pcbi.1010921"

[project.scripts]
customics = "customics.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["customics"]
omit = ["tests/*"]
